--- a/src/components/About_page/About_us.css
+++ b/src/components/About_page/About_us.css
@@ -6,6 +6,7 @@
 }
 .consugg{
    margin-top: -150px !important;
+   background-color: var(--second-primary);
 }
 
 @media only screen and (max-width: 1200px) {
