--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,12 @@
 .t-1{
-    color: var(--text-blue-900);
+    color: var(--primary);
+}
+.main{
+  background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
+  background-size: cover;
+  height: 590px;
+  margin-top: -75px;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.466);
 }
 h1{
    margin-top: 40px;
@@ -14,15 +21,15 @@ h1{
     padding-left:0;
   }
   .s-1{
-    border: 2px solid var(--text-blue-900);
+    border: 2px solid var(--primary);
     border-radius: 0px 10px 10px 0px; 
   }
   .s-2{
-    border: 2px solid var(--text-blue-700);
+    border: 2px solid var(--primary);
     border-radius:  0px 0px 0px 0px !important;
   }
   .s-3{
-    border: 2px solid var(--text-blue-700);
+    border: 2px solid var(--primary);
     border-radius:  10px 0px 0px 10px;
   }
   .fq-1{
