--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -1,5 +1,5 @@
-.btn-primary{
-    background-color: var(--text-blue-900) !important;
+.btns-primary{
+    background: linear-gradient(180deg, #A37707 0%, #D1B06B 100%) !important;
   }
   .btn-primary:hover{
       opacity: 0.90 !important;
@@ -26,20 +26,20 @@
   }
   
   .pk-1:hover{
-  background-color: var(--text-blue-900) !important;
-  color:  #fff;
+  background-color: var(--primary) !important;
+  color:  var(--third-secondary);
   }
   .ficon{
   width: 40px;
-  border: 2px solid var(--text-blue-900);
-  color:  var(--text-blue-900);
+  border: 2px solid var(--primary);
+  color:  var(--third-secondary);
   }
   .s-1{
-    border: 2px solid var(--text-blue-900);
+    border: 2px solid var(--primary);
     border-radius: 0px 10px 10px 0px; 
   }
   .ss-2{
-    border: 2px solid var(--text-blue-700);
+    border: 2px solid var(--primary);
     border-radius:  10px 0px 0px 10px !important;
   }
   .per1{
@@ -59,6 +59,9 @@
     margin-right: 10px !important;
     
 }
+.border-prime{
+  border-color: var(--primary) !important;
+}
 #profiles{
     width: 25%;
     border-radius: 50%;
@@ -66,7 +69,6 @@
 }
 .btn-group{
     margin-left: 65px;
-    border: 2px solid var(--text-black-900);
     border-radius: 10px 10px 10px 10px; 
 }
 .npjh{
@@ -75,7 +77,7 @@
 }
 .text-dark:hover{
   font-weight: 500 !important;
-  color: #24478F !important;
+  color: var(--primary) !important;
 }
 .text-dark{
   font-weight: 400;
