--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 :root{
-  --bg-dimwhite-900:#F5F5F5;
+  /* --bg-dimwhite-900:#F5F5F5;
   --bg-gray-100:#333333;
   --bg-black-50: #000000;
   --text-blue-900:#4D7CD3;
   --text-blue-700:rgba(77, 124, 211, 0.5);;
   --text-white-300: #F5F5F5;
-  --bg-lightgray-700: rgba(217, 217, 217, 0.2);
+  --bg-lightgray-700: rgba(217, 217, 217, 0.2); */
 
 
- --primary: #506bae;
- --second-primary:#738ed1;
- --third-primary: #d8e4f2;
- --secondary: #2c2c46;
- --second-secondary: #ff97a2;
+ --primary: #D1B06B;
+ --second-primary:#1F2732;
+ --third-primary: #555F6D;
+ --secondary: #161D27;
+ --second-secondary: #D7D7D7;
+ --third-secondary: #FFFFFF;
 
 }
 
