--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
  --primary: #D1B06B;
  --second-primary:#1F2732;
  --third-primary: #555F6D;
+ --fourth-primary:#2E3947;
  --secondary: #161D27;
  --second-secondary: #D7D7D7;
  --third-secondary: #FFFFFF;
