--- a/src/components/Hero/Category.css
+++ b/src/components/Hero/Category.css
@@ -56,6 +56,7 @@ line-height: 75px;
     margin-top: -70px;
     border-radius: 20px !important;
     height: 16% !important;
+    background-color: var( --fourth-primary) !important;
 }
 
 .cat_law{
