--- a/src/components/Hero/Category.css
+++ b/src/components/Hero/Category.css
@@ -45,8 +45,10 @@ line-height: 75px;
     height: 80px !important;
 }
 .cont{
-    background-color: var(--text-blue-700); 
+    color: var(--third-primary);
     border-radius: 9px; 
+    font-weight: 600 !important;
+    font-size: larger !important;
 }
 .suggestion{
     position: absolute;
@@ -76,20 +78,20 @@ line-height: 75px;
 }
 .viewbtn{
     border-radius: 50px !important;
-    font-size: smaller;
+    font-size: medium !important;
 }
 
 .sfcs:hover{
-   background-color: white !important;
-   color: var(--text-blue-900);
+   background: var(--second-secondary) !important;
+   color: var(--third-primary) !important;
+   font-weight: 600;
+   font-size: 93.2% !important;
+   border-color: var(--primary) !important;
 }
 
 .exp{
-    font-size: 69.59% !important;
-
+font-size: 69.59% !important;
 font-weight: 600 !important;
-
-
 }
 .card{
     border-radius: 17px !important;
@@ -163,5 +165,8 @@ line-height: 21px !important;
     .main{
         height: 390px !important;
         box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.144) !important;
+      }
+      .cont{
+        height: 50px !important;
       }
   }
