--- a/src/components/Contect_us/Contect_us.css
+++ b/src/components/Contect_us/Contect_us.css
@@ -5,3 +5,11 @@
         background-color: #ffffff !important;
     }
   }
+
+  .contect-bgColors{
+    background-color: var(--second-secondary);
+  }
+  .sugg_contects4{
+    margin-top: 250px !important;
+    margin-bottom: 20px !important;
+  }
