--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -32,7 +32,8 @@
         border-radius: 0px 0px 20px 20px; 
     }
     .deviders1{
-        margin-top: 90px !important;
+        margin-top: 40px !important;
+        font-size: xx-large !important;
     }
     .devider2{
         background-color: var( --fourth-primary);
