--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -24,7 +24,7 @@ textarea::placeholder {
   background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
   background-size: cover;
   height: 890px;
-  margin-top: -10px;
+  margin-top: -75px;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.466);
 }
 
@@ -46,7 +46,7 @@ textarea::placeholder {
 .btn-regi{
   width: 15%;
   height: 50px;
- margin-left: 40%;
+ margin-left: 38%;
 }
 .border-grays{
   border: 1px solid  var(--third-primary) !important;
@@ -57,6 +57,9 @@ input[type="file"]::file-selector-button {
   color:var(--third-primary);
   border-width: 0 0 0px !important;
   background-color: var(--secondary);
+}
+input[type="file"]:hover::file-selector-button {
+  background-color: var(--secondary) !important;
 }
 @media only screen and (max-width: 540px) {
 .forms-bg{
