--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -31,10 +31,12 @@ h1{
   .s-2{
     border: 2px solid var(--primary);
     border-radius:  0px 0px 0px 0px !important;
+    outline: none;
   }
   .s-3{
     border: 2px solid var(--primary) !important;
     border-radius:  10px 0px 0px 10px;
+    outline: none;
   }
   .fq-1{
     font-weight: 600;
@@ -49,4 +51,15 @@ h1{
   h2{
     font-size: 36px !important;
   }
+  .s-1{
+    width: 14% !important;
+  }
+  .navbar .navbar-toggler[aria-expanded="true"] {
+    color: var(--primary)!important;
+    }
+    .navbar .navbar-toggler:focus{
+    color: var(--primary);
+    }
+  
+    
   }
