--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ html{
   height: 70px;
   width: 70px;
   display: none;
+  z-index: 5;
   place-items: center;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
