--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -85,7 +85,7 @@ input[type="file"]:hover::file-selector-button {
 }
 
 
-/* choose file style  */
+/* choose forpfile Picture button style  */
 .file-input__input {
   width: 0.1px;
   height: 0.1px;
@@ -105,7 +105,7 @@ input[type="file"]:hover::file-selector-button {
   color: #fff;
   font-size: 14px;
   padding: 10px 12px;
-  background-color: rgb(131, 115, 24);
+  background-color: var(--third-primary);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
 }
 
