--- a/src/components/All_Lawyers/AllLawyer.css
+++ b/src/components/All_Lawyers/AllLawyer.css
@@ -67,3 +67,11 @@
 input[type="text"]{
     text-transform: capitalize;
 }
+.view_buttons .nameloc{
+    margin-left: 139px !important;
+    position: absolute;
+}
+.view_buttons .lawexp{
+  margin-left: 150px !important;
+  position: absolute;
+}
