--- a/src/components/About_page/About_us.css
+++ b/src/components/About_page/About_us.css
@@ -8,7 +8,9 @@
    margin-top: -95px !important;
    background-color: var(--second-primary);
 }
-
+.dmis{
+    margin-left: 15% !important;
+}
 @media only screen and (max-width: 1200px) {
     .frend{
         margin-top: 0px;
