--- a/src/components/job_description_page/Add_review/review_section.css
+++ b/src/components/job_description_page/Add_review/review_section.css
@@ -3,3 +3,9 @@
     background-color: var(--primary);
      height: 2px !important;
 }
+.review{
+   background-color: var(--fourth-primary);
+}
+.review .arrow{
+   background-color: var(--primary);
+}
