--- a/src/components/Hero/Lawyerscards.css
+++ b/src/components/Hero/Lawyerscards.css
@@ -1,6 +1,81 @@
-/* .preloader-img{
+.preloader-img1{
     width: 80px;
     height: 80px;
     border-radius: 50%;
     background-color: rgb(194, 189, 189);
-} */
+}
+
+.preloader-img2{
+    width: 40%;
+    height: 15px;
+    margin-top: 15px;
+    border-radius: 10%;
+    background-color: rgb(194, 189, 189);
+}
+
+.preloader-img3{
+    width: 60%;
+    height: 15px;
+    margin-top: 10px;
+    border-radius: 10%;
+    background-color: rgb(194, 189, 189);
+}
+.preloader-img4{
+    width: 50%;
+    margin-left: 30%;
+    height: 15px;
+    margin-top: 10px;
+    border-radius: 10%;
+    background-color: rgb(194, 189, 189);
+}
+.preloader-img5{
+    width: 20%;
+    height: 15px;
+    margin-top: 15px;
+    border-radius: 10%;
+    background-color: rgb(194, 189, 189);
+}
+.preloader-img6{
+    width: 100%;
+    height: 180px;
+    margin-top: 5px;
+    background-color: rgb(194, 189, 189);
+}
+
+.preloader-img7{
+    width: 50%;
+    height: 15px;
+    margin-top: 10px;
+    background-color: rgb(194, 189, 189);
+}
+
+.preloader-img8{
+    width: 80%;
+    height: 25px;
+    margin-top: 10px;
+    border-radius: 10%;
+    background-color: rgb(194, 189, 189);
+}
+
+.loading-animation{
+    overflow: hidden;
+    background: rgb(194, 189, 189);
+}
+
+.loading-animation::before{
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    animation: loading 1s infinite;
+    background: linear-gradient(to right, transparent,#D9D9D9,transparent);
+}
+
+@keyframes loading {
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+}
