--- a/src/components/Hero/Lawyerscards.css
+++ b/src/components/Hero/Lawyerscards.css
@@ -2,6 +2,7 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 
@@ -9,6 +10,7 @@
     width: 40%;
     height: 15px;
     margin-top: 15px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 
@@ -16,6 +18,7 @@
     width: 60%;
     height: 15px;
     margin-top: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 .preloader-img4{
@@ -23,18 +26,21 @@
     margin-left: 30%;
     height: 15px;
     margin-top: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 .preloader-img5{
     width: 20%;
     height: 15px;
     margin-top: 15px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 .preloader-img6{
-    width: 100%;
-    height: 180px;
+    width: 90%;
+    height: 200px;
     margin-top: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 
@@ -42,6 +48,7 @@
     width: 70%;
     height: 15px;
     margin-top: 20px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 
@@ -49,6 +56,7 @@
     width: 80%;
     height: 25px;
     margin-top: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
 
