--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -101,6 +101,9 @@ font-size: 93.2% !important;
     width: 190px;
     border-radius:  5px 0px 0px 5px !important;
   }
+  .main {
+    margin-top: 0px !important;
+}
 }
 
 /* styling for navbar */
