--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -104,6 +104,9 @@ font-size: 93.2% !important;
   .main {
     margin-top: 0px !important;
 }
+.asa{
+  display: none;
+}
 }
 
 /* styling for navbar */
