--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
@@ -99,14 +99,14 @@
        border-radius: 20px;
         width: 92.2%;
         margin-left: -13.98%;
-        height: 75.40vh;
+        height: 70.40vh;
     }
     .lawyer_message .msg_1 .text_msg1{
         border-radius: 25px 25px 25px 25px;
     }
     
     .lawyer_message .msg_1 .text_msg2{
-        height: 210px;
+        height: 170px;
         border-radius: 25px 25px 25px 25px;
     }
     .lawyer_message .msg_1 .text_msg1 p{
@@ -118,20 +118,510 @@
     .lawyer_message .msg_1 .text_msg2 p{
         font-size: 14px;
         width: 118%;
+        line-height: 19px;
         text-align: justify;
         margin-left: -30px;
     } 
     .lawyer_message .msg_1 .text_msg1 .pb{
         font-size: 14px !important;
         width: 118%;
+        line-height: 19px;
         text-align: justify;
         margin-left: -30px;
     } 
     .lawyer_message .user_pro{
         width: 77.38%;
-        margin-top: -180.69%;
+        margin-top: -176.69%;
         height: 78.90vh;
         border-radius: 20px 20px 20px 20px;
     }
     
+  }
+
+  @media only screen and (max-width: 360px) {
+    .lawyer_message .msg_1{
+         height: 76.40vh;
+     }
+    .lawyer_message .user_pro{
+        margin-top: -168.69%;
+    }
+    .lawyer_message .msg_1 .text_msg2{
+        height: 170px;
+        border-radius: 25px 25px 25px 25px;
+    }
+    .lawyer_message .msg_1 .text_msg1 .pb{
+        line-height: 18px;
+    } 
+    .lawyer_message .msg_1 .text_msg2 p{
+        line-height: 16px;
+    } 
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+
+  @media only screen and (max-width: 320px) {
+    .lawyer_message .msg_1{
+         height: 76.40vh;
+     }
+    .lawyer_message .user_pro{
+        margin-top: -168.69%;
+    }
+    .lawyer_message .msg_1 .text_msg1{
+        height: 270px;
+        margin-top: 20px;
+    }
+    .lawyer_message .msg_1 .text_msg2{
+        height: 170px;
+        margin-top: 20px;
+    }
+    .lawyer_message .msg_1 .text_msg1 .pb{
+        width: 135%;
+    } 
+    .lawyer_message .msg_1 .text_msg2 p{
+        line-height: 16px;
+        width: 135%;
+    } 
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+
+  @media only screen and (width: 375px) {
+    .lawyer_message .user_pro{
+        margin-top: -145.69%;
+    }
+    .lawyer_message .msg_1{
+        height: 76.40vh;
+    }
+    .lawyer_message .msg_1 .text_msg1{
+        height: 270px;
+        margin-top: 20px;
+    }
+    .lawyer_message .msg_1 .text_msg2{
+        height: 170px;
+        margin-top: 20px;
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+  @media only screen and (width: 820px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -75.89%;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_message .msg_1{
+        margin-top: -75.89%;
+        width: 62.42%;
+        margin-left: -8.98%;    
+     }
+     .lawyer_message{
+        height: 27.50vh;
+       
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+  @media only screen and (width: 768px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -68.89%;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_message .msg_1{
+        margin-top: -68.89%;  
+        width: 62.42%;
+        margin-left: -8.98%;    
+     }
+     .lawyer_message{
+        height: 27.50vh;
+       
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+
+  @media only screen and (width: 912px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -81.40%;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_message .msg_1{
+        margin-top: -81.40%; 
+        width: 62.42%;
+        margin-left: -8.98%; 
+     }
+     .lawyer_message{
+        height: 24.90vh;
+       
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+
+  @media only screen and (width: 540px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -107.40%;
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+  }
+
+  @media only screen and (width: 1024px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -8%;
+        margin-left: -110px;
+        height: 79.88vh;
+        width: 25.38%;
+    }
+    .lawyer_message .msg_1{
+        margin-top: -8%; 
+        height: 79.88vh;
+        width: 66.45%;
+        margin-left: -130px;   
+     }
+     .lawyer_message{
+        height: 68vh;   
+    }
+    .lawyer_message .msg_1 .text_msg1{
+        width: 92%;
+        height: 260px;
+        margin-top: 10px;
+    } 
+    .lawyer_message .msg_1 .text_msg2{
+        line-height: 16px;
+        width: 92%;
+        height: 190px;
+        margin-top: 10px;
+    } 
+    .lawyer_message .msg_1 .text_msg1 p{
+        margin-left: -20px; 
+        width: 108%;
+        text-align: justify;
+    } 
+    .sidebar{
+        position: relative;
+       z-index: 1;
+   }
+    
+  }
+
+  @media only screen and (width: 1280px) {
+    
+    .lawyer_message .user_pro{
+        margin-top: -10.69%;
+        margin-left: -130px;
+        height: 79.88vh;
+        width: 25.38%;
+    }
+    .lawyer_message .msg_1{
+        margin-top: -10.69%; 
+        width: 66%;
+        margin-left: -155px;   
+     }
+     .lawyer_message{
+        height: 62.20vh;
+       
+    }
+    .sidebar{
+         position: relative;
+        z-index: 1;
+    }
+  }
+
+
+  /*this is for profile*/
+  @media only screen and (max-width: 540px) {
+    .lawyer_profile{
+        width: 82%;
+        margin-top: 2.89%;
+        margin-left: 18%;
+        height: 28.40vh;
+    }
+    .lawyer_profile .msg_1{
+       border-radius: 20px;
+       width: 77.38%;
+        margin-left: .78%;
+        margin-top: -151.69%;
+        height: 100.40vh;
+    }
+    .card-body{
+        margin-top: -20px;
+       padding: 0%;
+       width: 130%;
+       margin-left: -25px;
+    }
+    .lawyer_profile .user_pro{
+        width: 77.38%;
+        margin-top: -176.69%;
+        height: 10.90vh;
+        border-radius: 20px 20px 20px 20px;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: 1.69%;
+        width: 70px;
+        margin-left: 32%;
+        height: 70px;  
+    }
+    .lawyer_profile .user_pro .umm{
+        width: 484% !important;
+    }
+    input[type="text"]{
+        height: 28px;
+    }
+    .dm{
+        height: 28px;
+    }
+    .mbs1{
+        margin-top: -10px !important;
+    }
+  }
+
+
+  @media only screen and (width: 375px) {
+    .lawyer_profile{
+        height: 37.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: .69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -130.69%;
+         height: 109.40vh;
+     }
+     .lawyer_profile .user_pro{
+        margin-top: -153.69%;
+    }
+  }
+
+  @media only screen and (width: 320px) {
+    .lawyer_profile{
+        height: 42.40vh;
+    }
+   
+    .lawyer_profile .msg_1{
+         margin-top: -150.69%;
+         height: 112.40vh;
+     }
+    
+  }
+
+  @media only screen and (width: 414px) {
+    .lawyer_profile{
+        height: 12.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: 3.69%;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -183.69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -156.69%;
+         height: 83.40vh;
+     }
+    
+  }
+
+  @media only screen and (width: 390px) {
+    .lawyer_profile{
+        height: 15.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: 3.69%;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -183.69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -156.69%;
+         height: 86.40vh;
+     }
+    
+  }
+  @media only screen and (width: 393px) {
+    .lawyer_profile{
+        height: 15.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: 3.69%;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -183.69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -156.69%;
+         height: 86.40vh;
+     }
+    
+  }
+
+  @media only screen and (width: 412px) {
+    .lawyer_profile{
+        height: 11.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: 3.69%;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -187.69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -161.69%;
+         height: 81.40vh;
+     }
+    
+  }
+
+  @media only screen and (width: 820px) { 
+    .lawyer_profile .user_pro{
+        margin-top: -38%;
+        height: 50vh;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_profile .msg_1{
+        margin-top: -38%;
+        height: 50vh;
+        width: 62.42%;
+        margin-left: -8.98%;
+     }
+     .lawyer_profile{
+        height: 25vh;
+       
+    }
+    .card-body{
+        margin-top: -20px;
+      
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+       height: 54vh !important;
+   }
+  }
+
+ 
+  @media only screen and (width: 912px) { 
+    .lawyer_profile .user_pro{
+        margin-top: -36%;
+        height: 48vh;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_profile .msg_1{
+        margin-top: -36%;
+        height: 48vh;
+        width: 62.42%;
+        margin-left: -8.98%;
+     }
+     .lawyer_profile{
+        height: 25vh;
+       
+    }
+    .card-body{
+        margin-top: -20px;
+      
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+       height: 50vh !important;
+   }
+  }
+
+  @media only screen and (width: 540px) {
+    .lawyer_profile{
+        height: 29.40vh;
+    }
+    .lawyer_profile .user_pro .um{  
+        margin-top: .89%;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -115.69%;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -98.69%;
+         height: 101.40vh;
+     }
+     .card-body{
+        margin-top: -20px;
+       padding: 0%;
+       width: 118%;
+       margin-left: -25px;
+    }
+    
+  }
+
+  @media only screen and (width: 1024px) {
+    
+    .lawyer_profile .user_pro{
+        margin-top: -19%;
+        margin-left: -110px;
+        height: 96vh; 
+        width: 24.42%;
+    }
+    .lawyer_profile  .msg_1{
+        margin-top: -19%;
+        height: 96vh;
+        width: 66.45%;
+        margin-left: -130px;   
+     }
+     .lawyer_profile {
+        height: 65vh;   
+    }
+    .card-body{
+        margin-top: -40px;
+      
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+       height: 98.88vh !important;
+   }
+    
+  }
+
+  @media only screen and (width: 1280px) {
+    
+    .lawyer_profile .user_pro{
+        margin-top: -10.69%;
+        height: 77.80vh;
+        margin-left: -130px;
+        width: 24.42%;
+    }
+    .lawyer_profile .msg_1{
+        margin-top: -10.69%; 
+        width: 66%;
+        height: 77.80vh;
+        margin-left: -155px;   
+     }
+     .lawyer_profile{
+        height: 62.20vh;
+       
+    }
+    .sidebar{
+         position: relative;
+        z-index: 1;
+        height: 80.88vh !important;
+    }
   }
