--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard.css
@@ -15,6 +15,8 @@ main{
     width: 200px;
     border-radius: 0px 40px 40px 0px;
     transition: all 0.5s;
+    /* position: absolute; */
+    
 }
 .top_section{
     display: flex;
@@ -64,5 +66,11 @@ main{
 }
 
 
-
+@media only screen and (max-width: 540px) {
+    .sidebar{
+        position: relative;
+        z-index: 1;
+       
+    }
+}
 
