--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
@@ -448,7 +448,18 @@
         height: 15.40vh;
     }
     .lawyer_profile .user_pro .um{  
-        margin-top: 3.69%;
+        margin-top: 2.69%;
+        width: 80px;
+        height: 80px;
+    }
+    .lawyer_profile .user_pro .umm{  
+        margin-top: 2.69%;
+        width: 180px;
+       
+    }
+    .lawyer_profile .change {
+        margin-left: -28px !important;
+    
     }
     .lawyer_profile .user_pro{
         margin-top: -183.69%;
