--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -8,7 +8,8 @@ font-size: 93.2% !important;
       background: linear-gradient(180deg, #D1B06B 0%,  #A37707 100%) !important;
   }
   .logo{
-    width: 40px;
+    width: 240px;
+    margin-left: -8px;
   }
   .footer-1{
     width: 80%;
