--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
@@ -87,8 +87,10 @@
     margin-left: 25%;
 }
 .lawyer_profile .user_pro .umn{  
-    width: 225%;
-    height: 100%;
+    width: 46% !important;
+    position: absolute;
+    border-radius: 50%;
+    height: 92px;
     margin-left: -24px;
 }
 
@@ -96,9 +98,7 @@
     .lawyer_message{
         width: 82%;
         margin-top: -4.89%;
-        margin-left: 18%;
-       
-       
+        margin-left: 18%;  
     }
     .lawyer_message .msg_1{
        border-radius: 20px;
@@ -140,7 +140,6 @@
         height: 78.90vh;
         border-radius: 20px 20px 20px 20px;
     }
-    
   }
 
   @media only screen and (max-width: 360px) {
@@ -406,12 +405,12 @@
         height: 70px;  
     }
     .lawyer_profile .user_pro .umn{  
-        width: 435%;
+        width: 24.70% !important;
+        height: 72px;
+        margin-left: -25px;
     }
-    .lawyer_profile .change {
-        margin-top: -28px;
-        position: absolute;
-        margin-left: -52px !important;
+    .lawyer_profile .change {  
+        position: relative !important;
     }
     
     
@@ -441,6 +440,15 @@
      .lawyer_profile .user_pro{
         margin-top: -153.69%;
     }
+    .lawyer_profile .user_pro .umn{  
+        width: 21.70% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 320px) {
@@ -452,6 +460,27 @@
          margin-top: -150.69%;
          height: 112.40vh;
      }
+     .lawyer_profile .user_pro .umn{  
+        width: 25.70% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
+  }
+  @media only screen and (width: 360px) {
+   
+     .lawyer_profile .user_pro .umn{  
+        width: 23% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 414px) {
@@ -468,6 +497,15 @@
          margin-top: -156.69%;
          height: 83.40vh;
      }
+     .lawyer_profile .user_pro .umn{  
+        width: 19.70% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 390px) {
@@ -479,11 +517,10 @@
         width: 80px;
         height: 80px;
     }
-
     .lawyer_profile .change {
-        margin-top: -18px;
-        position: absolute;
-        margin-left: -56px !important;
+        margin-left: -10px !important;
+        margin-top: -16px;
+        position: absolute !important;
     } 
     .lawyer_profile .user_pro{
         margin-top: -183.69%;
@@ -508,6 +545,15 @@
          margin-top: -156.69%;
          height: 86.40vh;
      }
+     .lawyer_profile .user_pro .umn{  
+        width: 20.70% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 412px) {
@@ -524,7 +570,15 @@
          margin-top: -161.69%;
          height: 81.40vh;
      }
-    
+     .lawyer_profile .user_pro .umn{  
+        width: 20% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 820px) { 
@@ -553,6 +607,44 @@
        z-index: 1;
        height: 54vh !important;
    }
+   .lawyer_profile .user_pro .umn{  
+    width: 44.70% !important;
+    
+}
+
+  }
+
+  @media only screen and (width: 768px) { 
+    .lawyer_profile .user_pro{
+        margin-top: -42.99%;
+        height: 58vh;
+        width: 25.38%;
+        margin-left: -60px;
+    }
+    .lawyer_profile .msg_1{
+        margin-top: -42.99%;
+        height: 58vh;
+        width: 62.42%;
+        margin-left: -8.98%;
+     }
+     .lawyer_profile{
+        height: 27.29vh;
+       
+    }
+    .card-body{
+        margin-top: -20px;
+      
+    }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+       height: 62vh !important;
+   }
+   .lawyer_profile .user_pro .umn{  
+    width: 46.70% !important;
+    
+}
+
   }
 
  
@@ -582,6 +674,11 @@
        z-index: 1;
        height: 50vh !important;
    }
+   .lawyer_profile .user_pro .umn{  
+    width: 39.70% !important;
+    
+}
+
   }
 
   @media only screen and (width: 540px) {
@@ -604,7 +701,15 @@
        width: 118%;
        margin-left: -25px;
     }
-    
+    .lawyer_profile .user_pro .umn{  
+        width: 15.42% !important;
+        height: 62px;
+    }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
   }
 
   @media only screen and (width: 1024px) {
@@ -633,7 +738,13 @@
        z-index: 1;
        height: 98.88vh !important;
    }
-    
+   .lawyer_profile .user_pro .umn{  
+    width: 36.70% !important;
+    height: 92px;
+}
+ .lawyer_profile .change {
+    position: absolute !important;
+} 
   }
 
   @media only screen and (width: 1280px) {
@@ -659,4 +770,11 @@
         z-index: 1;
         height: 80.88vh !important;
     }
+    .lawyer_profile .user_pro .umn{  
+        width: 29.70% !important;
+        height: 92px;
+    }
+     .lawyer_profile .change {
+        position: absolute !important;
+    } 
   }
