--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -12,7 +12,7 @@
  background-color: var(--secondary) !important;
 }
 input[placeholder], [placeholder], *[placeholder] {
-  color: var(--primary) !important;
+  color: var(--secondary) !important;
 }
 input::placeholder {
   color: var(--third-primary) !important;
