--- a/src/components/Admin_dashboard/admin.css
+++ b/src/components/Admin_dashboard/admin.css
@@ -1,10 +1,25 @@
 .admin_dashboard{
     width: 82%;
-    margin-top: -41.89%;
-    margin-left: 18%;
-    height: 79.16vh;
+    margin-top: -43.99%;
+    margin-left: 17.45%;
+    height: 78.40vh;
 }
 .admin_dashboard th, tr, td,
 .admin_dashboard th, tr {
     border: none;
+    padding: 0.45rem 2rem !important;
   }
+  .admin_dashboard .admindash{
+    background-color: var(--fourth-primary) !important;
+    border-radius: 0px, 37px, 37px, 37px;
+    width: 100%;
+    margin-top: -43.99%;
+    height: 76.89vh;
+  }
+  .admin_dashboard thead{
+   background-color: #4C525A;
+  }
+  .admin_dashboard .form-control {
+    padding: 0rem 0rem;
+    border: 1px solid  var(--fourth-primary);
+}
