--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -66,7 +66,7 @@ font-size: 93.2% !important;
 .border-prime{
   border-color: var(--primary) !important;
   font-weight: 600;
-  color: var(--third-primary) !important;
+  color: rgba(0, 0, 0, 0.747) !important;
   font-size: 93.2% !important;
 }
 #profiles{
