--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
@@ -7,7 +7,6 @@
     height: 79.16vh;
    
 }
-
 .lawyer_message .msg_1{
     background-color: var(--fourth-primary) !important;
     border-radius: 0px, 37px, 37px, 37px;
@@ -16,6 +15,12 @@
     margin-left: -13.98%;
     height: 78.40vh;
 }
+.block-style {
+    display: block !important;
+  }
+  .block-styles {
+    display: none !important;
+  }
 .lawyer_message .msg_1 .text_msg1{
     background-color: var(--third-primary) !important;
     width: 90%;
@@ -23,6 +28,7 @@
     position: relative;
     border-radius: 0px 25px 25px 25px;
     margin-top: 40px;
+    display: none;
 }
 
 .lawyer_message .msg_1 .text_msg2{
@@ -58,7 +64,11 @@
     height: 79.16vh;
    
 }
-
+.lawyer_profile  .inpu{
+    /* font-size: 0px; */
+    line-height: 34px;
+    width: 92.99% !important;
+}
 .lawyer_profile .msg_1{
     background-color: var(--fourth-primary) !important;
     border-radius: 0px, 37px, 37px, 37px;
@@ -423,6 +433,11 @@
     
     input[type="text"]{
         height: 28px;
+        font-size: 12px;
+    }
+    input[type="tel"]{
+        height: 28px;
+        font-size: 12px;
     }
     .dm{
         height: 28px;
@@ -430,6 +445,14 @@
     .mbs1{
         margin-top: -10px !important;
     }
+    .lawyer_profile  .inpu{
+        line-height: 26px;
+        width: 83.99% !important;
+    }
+    .lawyer_profile  .input-group>.form-select {
+       height: 28px;
+       font-size: 12px;
+    }    
   }
 
 
@@ -476,6 +499,10 @@
         margin-top: -26px;
         position: absolute !important;
     } 
+    .lawyer_profile  .inpu{
+        line-height: 26px;
+        width: 75.99% !important;
+    }
   }
   @media only screen and (width: 360px) {
    
@@ -488,6 +515,10 @@
         margin-top: -26px;
         position: absolute !important;
     } 
+    .lawyer_profile  .inpu{
+        line-height: 26px;
+        width: 80.99% !important;
+    }
   }
 
   @media only screen and (width: 414px) {
@@ -618,6 +649,11 @@
     width: 44.70% !important;
     
 }
+.lawyer_profile  .inpu{
+    line-height: 26px;
+    width: 74.99% !important;
+    line-height: 34px;
+}
 
   }
 
@@ -651,7 +687,11 @@
     width: 46.70% !important;
     
 }
-
+.lawyer_profile  .inpu{
+    line-height: 26px;
+    width: 74.99% !important;
+    line-height: 34px;
+}
   }
 
  
@@ -685,7 +725,11 @@
     width: 39.70% !important;
     
 }
-
+.lawyer_profile  .inpu{
+    line-height: 26px;
+    width: 79.99% !important;
+    line-height: 34px;
+}
   }
 
   @media only screen and (width: 540px) {
@@ -717,6 +761,9 @@
         margin-top: -26px;
         position: absolute !important;
     } 
+    .lawyer_profile  .inpu{
+        width: 88.99% !important;
+    }
   }
 
   @media only screen and (width: 1024px) {
@@ -752,6 +799,11 @@
  .lawyer_profile .change {
     position: absolute !important;
 } 
+.lawyer_profile  .inpu{
+    line-height: 26px;
+    width: 84.99% !important;
+    line-height: 34px;
+}
   }
 
   @media only screen and (width: 1280px) {
@@ -784,4 +836,9 @@
      .lawyer_profile .change {
         position: absolute !important;
     } 
+    .lawyer_profile  .inpu{
+        line-height: 26px;
+        width: 86.99% !important;
+        line-height: 34px;
+    }
   }
