--- a/src/components/job_description_page/Add_review/review_section.css
+++ b/src/components/job_description_page/Add_review/review_section.css
@@ -9,3 +9,9 @@
 .review .arrow{
    background-color: var(--primary);
 }
+.lim{
+   width: 84px;
+    height: 84px;
+    border-radius: 50%;
+    border: 2px solid var(--primary) !important;
+}
