--- a/src/components/job_description_page/Lawyers_profile_card/All_lawyer_card/All_lawyers_card.css
+++ b/src/components/job_description_page/Lawyers_profile_card/All_lawyer_card/All_lawyers_card.css
@@ -21,8 +21,14 @@
   margin: auto !important;
 }
 .pics-pro{
-    height: 65px;
+    height: 61px;
     border-radius: 50%;
+    width: 61px;
+}
+.lims{
     width: 65px;
     margin-left: 10px;
+    height: 65px;
+    border-radius: 50%;
+    border: 2px solid var(--primary) !important;
 }
