remember me featured added

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -24,6 +24,9 @@ option:checked,
 option:hover {
   background-color: var(--primary);
 }
+option:focus {
+  background-color: var(--third-primary);
+}
 
 .form-sectionss{
   background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
