--- a/src/components/Hero/Category.css
+++ b/src/components/Hero/Category.css
@@ -182,4 +182,11 @@ line-height: 21px !important;
       .cont{
         height: 50px !important;
       }
+      .ecard{
+        margin-top: -34px !important;
+        padding: 2rem!important;
+      }
+      .mss-4 {
+        margin-left: 2.9rem!important;
+    }
   }
