--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -22,7 +22,7 @@
 }
 
 
-@media only screen and (max-width: 540px) {
+@media screen and (min-device-width: 320px) and (max-device-width: 480px){
     .SSLSD{
         display: flex;
         flex-direction: column-reverse;
@@ -30,6 +30,12 @@
     }
     .testimonial1{
         border-radius: 0px 0px 20px 20px; 
+        padding-left: 5% !important;
+        padding-right: 12% !important;
+        padding-top: 5%;
+        margin-left: 8px;
+        width: 96.78% !important;
+        padding-bottom: 2%;
     }
     .deviders1{
         margin-top: 40px !important;
@@ -38,11 +44,11 @@
     .devider2{
         background-color: var( --fourth-primary);
         border-radius: 20px 20px 0px 0px; 
-        margin-left: 0px;
-        width: 100% !important;
+        margin-left: 8px;
+        width: 96.78% !important;
     }
     .mts{
-        margin-top: 30px;
+        margin-top: 16px;
         margin-left:    px;
     }
     .mtss{
