--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -22,20 +22,20 @@
 }
 
 
-@media screen and (min-device-width: 320px) and (max-device-width: 480px){
+@media (max-width: 414px){
     .SSLSD{
         display: flex;
         flex-direction: column-reverse;
         margin-bottom: 40px !important;
     }
     .testimonial1{
-        border-radius: 0px 0px 20px 20px; 
         padding-left: 5% !important;
         padding-right: 12% !important;
-        padding-top: 5%;
+        padding-top: 0% !important;
         margin-left: 8px;
         width: 96.78% !important;
         padding-bottom: 2%;
+        display: flex !important;
     }
     .deviders1{
         margin-top: 40px !important;
@@ -49,7 +49,6 @@
     }
     .mts{
         margin-top: 16px;
-        margin-left:    px;
     }
     .mtss{
         margin-top: 0px !important;
@@ -57,4 +56,82 @@
     .img-fluids{
         height: 30px;
     }
+    .testimonial1 span img{
+        width: 70% !important;
+    }
+    .mts img{
+        width: 65px !important;
+        height: 65px !important;
+        border-radius: 50%;
+    }
 }
+@media only screen and (min-width: 415px) and (max-width: 575px){
+    .SSLSD{
+        display: flex;
+        flex-direction: column-reverse;
+        margin-bottom: 40px !important;
+    }
+    .testimonial1{
+        padding-left: 5% !important;
+        padding-right: 12% !important;
+        padding-top: 0% !important;
+        margin-left: 8px;
+        margin-right: 8px;
+        width: auto !important;
+        padding: 5%;
+        padding-bottom: 2%;
+        display: flex !important;
+    }
+    .deviders1{
+        margin-top: 40px !important;
+        font-size: xx-large !important;
+    }
+    .devider2{
+        background-color: var( --fourth-primary);
+        border-radius: 20px 20px 0px 0px; 
+        margin-left: 8px;
+        margin-right: 8px;
+        width: auto !important;
+    }
+    .mts{
+        margin-top: 16px;
+    }
+    .mtss{
+        margin-top: 0px !important;
+    }
+    .img-fluids{
+        height: 30px;
+    }
+    .testimonial1 span img{
+        width: 70% !important;
+    }
+    .mts img{
+        width: 65px !important;
+        height: 65px !important;
+        border-radius: 50%;
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px){
+    .testimonial1 {
+        padding: 16%;
+    }
+    .mts img{
+        width: 65px !important;
+        height: 65px !important;
+        border-radius: 50%;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px){
+    .testimonial1 {
+        padding-left: 8%;
+        padding-right: 14%;
+        word-spacing: -5.2px;
+    }
+    .mts img{
+        width: 65px !important;
+        height: 65px !important;
+        border-radius: 50%;
+    }
+}
+
